--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    Testing...
+    <header class="banner-container">
+        <div class="banner-content">
+            <p>Happy New Year</p>
+            <h1>New Year Party<br>Celebration</h1>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
