off section completed

--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy New Year</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <!-- banner section starts here -->
     <header class="banner-container">
-        <div class="banner-content">
-            <p>Happy New Year</p>
-            <h1>New Year Party<br>Celebration</h1>
-        </div>
+      <div class="banner-content">
+        <p>Happy New Year</p>
+        <h1>New Year Party<br />Celebration</h1>
+      </div>
     </header>
-    <main></main>
+    <!-- banner section ends here -->
+
+    <main>
+      <!-- OFF section starts here -->
+      <section class="off-container">
+        <div class="off-content">
+          <h2>65% OFF</h2>
+          <p>OUR HOLIDAY DEALS ARE BETTER</p>
+          <h3>ALL CATEGORIES</h3>
+          <div class="off-content-image">
+            <img src="./assets/new-year-photo.png" alt="New Year Photo" />
+          </div>
+        </div>
+      </section>
+      <!-- OFF section ends here -->
+    </main>
     <footer></footer>
-</body>
+  </body>
 </html>
