midnight-party section completed

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
         </div>
       </section>
       <!-- OFF section ends here -->
+
+      <!-- midnight party section starts here -->
+      <section class="midnight-party-container">
+        <div class="midnight-party-left-content">
+          <h3>Welcome to <br />midnight party</h3>
+          <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+          <span>Join now</span>
+        </div>
+        <div class="midnight-party-right-content">
+          <img src="./assets/2024.png" alt="2024 image" />
+        </div>
+      </section>
+      <!-- midnight party section ends here -->
     </main>
     <footer></footer>
   </body>
