event section completed

--- a/index.html
+++ b/index.html
@@ -38,10 +38,21 @@
           <span>Join now</span>
         </div>
         <div class="midnight-party-right-content">
-          <img src="./assets/2024.png" alt="2024 image" />
+          <img src="./assets/2025.png" alt="2024 image" />
         </div>
       </section>
       <!-- midnight party section ends here -->
+
+      <!-- event section starts here -->
+      <section class="event-container">
+        <div class="event-content">
+          <p><span class="event-label">Place:</span> New Park Hotel</p>
+          <p><span class="event-label">Date:</span> 31 December Night 2023</p>
+          <p><span class="event-label">Time:</span> Evening 7.30 PM to 12.30 AM</p>
+        </div>
+        <button class="event-join-btn">Join Now</button>
+      </section>
+      <!-- event section ends here -->
     </main>
     <footer></footer>
   </body>
