best-offer section completed

--- a/index.html
+++ b/index.html
@@ -53,6 +53,26 @@
         <button class="event-join-btn">Join Now</button>
       </section>
       <!-- event section ends here -->
+
+      <!-- best-offer section starts here -->
+      <section class="best-offer-container">
+        <div class="best-offer-content">
+          <div class="best-offer-left-content">
+            <p>New best offer</p>
+            <h4>Coming Soon</h4>
+            <span>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</span>
+          </div>
+          <div class="best-offer-middle-content">
+            <img src="./assets/celebrating.png" alt="Celebrating in a Team" />
+          </div>
+          <div class="best-offer-right-content">
+            <h4>2025</h4>
+            <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            <img src="./assets/h-n-y.png" alt="Happy new year image" />
+          </div>
+        </div>
+      </section>
+      <!-- best-offer section ends here -->
     </main>
     <footer></footer>
   </body>
