readme file updated

--- a/index.html
+++ b/index.html
@@ -73,6 +73,42 @@
         </div>
       </section>
       <!-- best-offer section ends here -->
+
+      <!-- holiday-dale section starts here -->
+      <section class="holiday-sale-container">
+        <div class="holiday-sale-upper-content">
+          <p>What is functional</p>
+          <h5><span class="event-label">Holiday</span> sale 50%</h5>
+          <h6>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</h6>
+        </div>
+        <div class="holiday-sale-lower-content">
+          <div class="holiday-sale-lower-left-content"><img src="./assets/box.png" alt="" /></div>
+          <div class="holiday-sale-lower-right-content"><img src="./assets/sale.png" alt="" /></div>
+        </div>
+      </section>
+      <!-- holiday-dale section ends here -->
+
+      <!-- portfolio section starts here -->
+      <section class="portfolio-container">
+        <div class="portfolio-upper-content">
+          <p>THE BEST GIFTS</p>
+          <h5>Our Awesome Portfolio</h5>
+          <h6>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</h6>
+        </div>
+        <div class="portfolio-lower-content">
+          <div>
+            <img src="" alt="" />
+            <img src="" alt="" />
+            <img src="" alt="" />
+          </div>
+          <div>
+            <img src="" alt="" />
+            <img src="" alt="" />
+            <img src="" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- portfolio section ends here -->
     </main>
     <footer></footer>
   </body>
